--- a/updater/package.json
+++ b/updater/package.json
@@ -13,7 +13,8 @@
     "scrape:tariffs:ee:eto": "node src/fetchers/tariffs/ee_eto.mjs",
     "scrape:tariffs:lt:zaliasis": "node src/fetchers/tariffs/lt_zaliasis.mjs",
     "scrape:tariffs:lt:gamtos": "node src/fetchers/tariffs/lt_gamtos_ateitis.mjs",
-    "tariffs:merge": "node src/merge_tariffs_items.mjs"
+    "tariffs:merge": "node src/merge_tariffs_items.mjs",
+    "europen:merge": "node src/run_europen_merge.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.0",
@@ -23,6 +24,7 @@
     "pdf-parse": "^1.1.1",
     "zod": "^3.23.8",
     "undici": "^6.19.8",
-    "@fast-csv/parse": "^5.0.0"
+    "@fast-csv/parse": "^5.0.0",
+    "xlsx": "^0.18.5"
   }
 }
